修改跳转的Schem错误，添加getdef的toast

--- a/VinAdfrCloik/Info.plist
+++ b/VinAdfrCloik/Info.plist
@@ -29,10 +29,9 @@
 		<string>fb</string>
 		<string>instagram</string>
 		<string>twitter</string>
-		<string>facebook</string>
 		<string>tiktok</string>
-		<string>twitter</string>
-		<string>qq</string>
+		<string>tweetie</string>
+		<string>mqq</string>
 		<string>comgooglemaps</string>
 		<string>whatsapp</string>
 	</array>
