--- a/VinAdfrCloik/Info.plist
+++ b/VinAdfrCloik/Info.plist
@@ -21,7 +21,7 @@
 	<key>FacebookClientToken</key>
 	<string>99911adeae8e3327ac2a00e12d26ba67</string>
 	<key>FacebookDisplayName</key>
-	<string>VintAre</string>
+	<string>LivaMe</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>alipay</string>
